--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,15 @@
       <artifactId>log4j-api</artifactId>
       <version>2.20.0</version>
     </dependency>
-  </dependencies>
 
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20230227</version>
+    </dependency>
+    
+  </dependencies>
+  
   <build>
     <plugins>
       <!-- Maven Compiler Plugin -->
